Fixing alignment of footer elements

--- a/assets/css/_global.scss
+++ b/assets/css/_global.scss
@@ -70,8 +70,9 @@ h4 {
 }
 
 .Donate {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+  display: flex;
+  justify-content: center;
+  padding-top: 3rem
 
   &-button {
     opacity: 0.7;
